# ClangTidy-Analyzer

./: CMakeLists.txt  build.sh  build_clang-tidy.sh  main.cpp
